# rust_axum_aksama_auth

./: Cargo.toml  README.md  docker-compose.yml  justfile
migrations/: 20241216001859_create_users_table.sql  20241216153237_init.up.sql
src/: init.rs  lib.rs  main.rs  middleware.rs  routes.rs
src/data/: errors.rs  mod.rs  user.rs
src/handlers/: auth.rs  errors.rs  helpers.rs  mod.rs  public.rs  todos.rs
src/models/: app.rs  mod.rs  templates.rs  user_form_models.rs
static/css/: auth.css
templates/: index.html
templates/pages/: create.html  home.html  log-in.html  notfound.html  server-error.html  sign-up.html  todos.html
templates/partials/: navigation.html
