[package]
name = "rust_axum_askama_tuto"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.8", features = ["macros"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
validator = { version = "0.19.0", features = ["derive"] }
regex = "1.11.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls","postgres", "macros"] }
dotenvy = "0.15.7"
bcrypt = "0.16.0"
thiserror = "2.0.7"
tower-sessions = "0.13.0"
tower-sessions-sqlx-store = { version = "0.14.2", features = ["postgres"] }
time = "0.3.37"

